--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="airport_traffic.js"></script>
 
-    <title>Australian Aiport Traffic </title>
+    <title>Australian Airport Traffic </title>
 </head>
 
 <body>
@@ -22,3 +22,4 @@
 </body>
 
 </html>
+
