--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 </head>
 
 <body>
-    <h1>Australian Aiport Traffic</h1>
+    <h1>Australian Airport Traffic</h1>
     <div id="proportional_symbol_map">
     </div>
 </body>
 
 </html>
+
 
