--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
     <script src="airport_traffic.js"></script>
+    <script src="co2_emissions.js"></script>
 
     <title>Australian Airport Traffic </title>
 </head>
@@ -19,8 +20,9 @@
     <h1>Australian Airport Traffic</h1>
     <div id="proportional_symbol_map">
     </div>
+    <h1>CO2 Emssions</h1>
+    <div id="line_chart">
+    </div>
 </body>
 
 </html>
-
-
