--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
-    <script src="airport_traffic.js"></script>
+    <script src="vega_lite_plots.js"></script>
 
     <title>Australian Airport Traffic </title>
 </head>
@@ -25,4 +25,5 @@
 </body>
 
 </html>
+
 
