--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <h1>Australian Airport Traffic</h1>
     <div id="proportional_symbol_map">
     </div>
-    <h1>CO2 Emssions (OECD Countries excluding United States)</h1>
+    <h1>CO2 Emissions (OECD Countries excluding United States)</h1>
     <div id="line_chart">
     </div>
 </body>
 
 </html>
+
